# ActRootV2

./: .clang-format  .gitignore  Act4ActionInitialization_8cc.html  Act4ActionInitialization_8cc__incl.map  Act4ActionInitialization_8cc__incl.md5  Act4ActionInitialization_8hh.html  Act4ActionInitialization_8hh__dep__incl.map  Act4ActionInitialization_8hh__dep__incl.md5  Act4ActionInitialization_8hh__incl.map  Act4ActionInitialization_8hh__incl.md5  Act4ActionInitialization_8hh_source.html  Act4DetectorConstruction_8cc.html  Act4DetectorConstruction_8cc__incl.map  Act4DetectorConstruction_8cc__incl.md5  Act4DetectorConstruction_8hh.html  Act4DetectorConstruction_8hh__dep__incl.map  Act4DetectorConstruction_8hh__dep__incl.md5  Act4DetectorConstruction_8hh__incl.map  Act4DetectorConstruction_8hh__incl.md5  Act4DetectorConstruction_8hh_source.html  Act4DriftDetector_8cc.html  Act4DriftDetector_8cc__incl.map  Act4DriftDetector_8cc__incl.md5  Act4DriftDetector_8hh.html  Act4DriftDetector_8hh__dep__incl.map  Act4DriftDetector_8hh__dep__incl.md5  Act4DriftDetector_8hh__incl.map  Act4DriftDetector_8hh__incl.md5  Act4DriftDetector_8hh_source.html  Act4EventAction_8cc.html  Act4EventAction_8cc__incl.map  Act4EventAction_8cc__incl.md5  Act4EventAction_8hh.html  Act4EventAction_8hh__dep__incl.map  Act4EventAction_8hh__dep__incl.md5  Act4EventAction_8hh__incl.map  Act4EventAction_8hh__incl.md5  Act4EventAction_8hh_source.html  Act4PrimaryGenerator_8cc.html  Act4PrimaryGenerator_8cc__incl.map  (+1927 more)
Algorithm/: ActAlgorithmLinkDef.hh  CMakeLists.txt
Cluster/: ActClIMB.cxx  ActClIMB.h  ActCluster.cxx  ActCluster.h  ActClusterLinkDef.hh  ActInterval.h  ActMultiStep.cxx  ActMultiStep.h  ActRANSAC.cxx  ActRANSAC.h  CMakeLists.txt
Core/: ActCalibrationManager.cxx  ActColors.h  ActCoreLinkDef.hh  ActCorrDetector.cxx  ActCorrDetector.h  ActDetectorManager.cxx  ActDetectorManager.h  ActEventPainter.cxx  ActEventPainter.h  ActHistogramPainter.cxx  ActHistogramPainter.h  ActInputData.cxx  ActInputData.h  ActInputIterator.cxx  ActInputIterator.h  ActInputParser.cxx  ActInputParser.h  ActJoinData.cxx  ActJoinData.h  ActMTExecutor.cxx  ActMTExecutor.h  ActMergerData.cxx  ActMergerData.h  ActMergerDetector.cxx  ActMergerDetector.h  ActModularData.cxx  ActModularData.h  ActModularDetector.cxx  ActModularDetector.h  ActOutputData.cxx  ActOutputData.h  ActRootLinkDef.h  ActSilData.cxx  ActSilData.h  ActSilDetector.cxx  ActSilDetector.h  ActTPCData.cxx  ActTPCData.h  ActTPCDetector.cxx  ActTPCDetector.h  (+34 more)
Core/inc/: ActCalibrationManager.h  ActCluster.h  ActCorrDetector.h  ActCutsManager.h  ActDataManager.h  ActDetectorManager.h  ActEventPainter.h  ActHistogramPainter.h  ActInputData.h  ActInputIterator.h  ActInputParser.h  ActMergerData.h  ActMergerDetector.h  ActModularDetector.h  ActOptions.h  ActOutputData.h  ActSilData.h  ActSilDetector.h  ActTPCDetector.h  ActTypes.h  ActUtils.h  ActVData.h  ActVDetector.h
Core/src/: ActCalibrationManager.cxx  ActCluster.cxx  ActDataManager.cxx  ActDetectorManager.cxx  ActEventPainter.cxx  ActHistogramPainter.cxx  ActInputData.cxx  ActInputIterator.cxx  ActInputParser.cxx  ActMTExecutor.cxx  ActMergerData.cxx  ActMergerDetector.cxx  ActModularDetector.cxx  ActOptions.cxx  ActOutputData.cxx  ActSilData.cxx  ActSilDetector.cxx  ActTPCDetector.cxx  ActUtils.cxx  DetectorManager.cxx  DetectorManager.h  InputData.cxx  InputData.h  TPCDetector.h
Data/: ActDataLinkDef.hh  CMakeLists.txt
Detectors/: ActDetectorsLinkDef.hh  CMakeLists.txt
Geant4/: Act4DetectorConstruction.hh  Act4DriftDetector.cc  Act4DriftDetector.hh  Act4EventAction.cc  Act4EventAction.hh  Act4PrimaryGenerator.hh  Act4SilDetector.cc  Act4SteppingAction.hh  ActActionInitialization.cc  ActActionInitialization.hh  ActDetectorConstruction.cc  ActDetectorConstruction.hh  ActDriftDetector.cc  ActDriftDetector.hh  ActEventAction.cc  ActEventAction.hh  ActGeant4.cc  ActPrimaryGenerator.cc  ActPrimaryGenerator.hh  ActRunAction.cc  ActRunAction.hh  ActSilDetector.cc  ActSilDetector.hh  ActSteppingAction.cc  ActSteppingAction.hh  CMakeLists.txt
Geant4/inc/: Act4ActionInitialization.hh  Act4RunAction.hh  Act4SilDetector.hh
Geant4/macros/: init_vis.mac  vis.mac
Geant4/src/: Act4ActionInitialization.cc  Act4DetectorConstruction.cc  Act4PrimaryGenerator.cc  Act4RunAction.cc  Act4SteppingAction.cc
Physics/: ActKinematics.cxx  ActKinematics.h  ActLine.cxx  ActLine.h  ActPIDCorrector.cxx  ActPIDCorrector.h  ActParticle.cxx  ActParticle.h  ActPhysicsLinkDef.h  ActPhysicsLinkDef.hh  ActSRIM.cxx  ActSRIM.h  ActSilMatrix.cxx  ActSilMatrix.h  ActSilSpecs.cxx  ActSilSpecs.h  CMakeLists.txt  Constants.h  Kinematics.cxx  Kinematics.h  Particle.cxx  Particle.h  nubase20.txt
Physics/Data/: nubase20.txt
Physics/inc/: ActGas.h  ActGenCorrection.h  ActKinematics.h  ActLine.h  ActPIDCorrector.h  ActParticle.h  ActSRIM.h  ActSilMatrix.h  ActSilSpecs.h
Physics/src/: ActGas.cxx  ActGenCorrection.cxx  ActKinematics.cxx  ActLine.cxx  ActPIDCorrector.cxx  ActParticle.cxx  ActSRIM.cxx  ActSilMatrix.cxx  ActSilSpecs.cxx  Particle.cxx  Particle.h  SRIM.cxx  SRIM.h
Simulation/: ActGeometry.cxx  ActGeometry.h  ActKinematicGenerator.cxx  ActRunner.cxx  ActSimulationLinkDef.hh  CMakeLists.txt  Geometry.cxx  Geometry.h  KinematicGenerator.cxx  KinematicGenerator.h  Runner.cxx  Runner.h  TheoCrossSection.cxx  TheoCrossSection.h
Simulation/inc/: ActCrossSection.h  ActDecayGenerator.h  ActGeometry.h  ActKinematicGenerator.h  ActRunner.h  ActTrackGenerator.h
Simulation/src/: ActCrossSection.cxx  ActDecayGenerator.cxx  ActGeometry.cxx  ActKinematicGenerator.cxx  ActRunner.cxx  ActTheoCrossSection.cxx  ActTrackGenerator.cxx
Utility/: ActUtilityLinkDef.hh  CMakeLists.txt  actplot.cxx  actroot.cxx
Utility/exec/: actplot.cxx  actroot.cxx
Utility/inc/: ActCutsManager.h  ActEventPainter.h  ActHistogramPainter.h  ActMTExecutor.h  ActProgressBar.h
Utility/src/: ActEventPainter.cxx  ActHistogramPainter.cxx  ActMTExecutor.cxx  ActProgressBar.cxx
inc/: App.h  CalibrationManager.h  DetectorManager.h  EventPainter.h  InputData.h  InputIterator.h  (+8 more)
(+256 files in other folders)
